#
# Copyright (C) 2011-2012 David Bigagli
#

include $(top_srcdir)/common.mk

SUBDIRS = lsf lsbatch lsf/res eauth scripts chkpnt config examples

MISSING_FILES = aclocal.m4

MAINTAINERCLEANFILES = $(MISSING_FILES) 
openlava_libincludedir = $(libdir)/openlava-2.0/include
nodist_openlava_libinclude_HEADERS = config.h

